Bug 507148 - Columns in main budget view cannot be resized
Summary: Columns in main budget view cannot be resized
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-17 08:42 UTC by sigma343
Modified: 2025-07-30 09:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments
Screenshot of locked budget columns (17.47 KB, image/png)
2025-07-17 08:42 UTC, sigma343
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sigma343 2025-07-17 08:42:57 UTC
Created attachment 183297 [details]
Screenshot of locked budget columns

SUMMARY
Columns in main budget screen cannot be resized

STEPS TO REPRODUCE
1. Open budget menu
2. Click on a budget
3. The columns in the main screen (see attached screenshot) are locked and cannot be resized

OBSERVED RESULT
Columns in main budget screen cannot be resized (see attached screenshot)

EXPECTED RESULT
Columns should be able to be resized and not be locked

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux 
KDE Plasma Version: 6.3.6
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Comment 1 Thomas Baumgart 2025-07-30 08:24:40 UTC
Another issue introduced by Qt6
Comment 2 Thomas Baumgart 2025-07-30 08:54:49 UTC
Git commit c287f8389b645551aecd57fabecedf5b6785ae7f by Thomas Baumgart.
Committed on 30/07/2025 at 08:49.
Pushed by tbaumgart into branch 'master'.

Allow resizing of columns
FIXED-IN: 5.2.1

M  +2    -0    kmymoney/widgets/columnselector.cpp

https://invent.kde.org/office/kmymoney/-/commit/c287f8389b645551aecd57fabecedf5b6785ae7f
Comment 3 Thomas Baumgart 2025-07-30 09:58:03 UTC
Git commit 8ccf45b27241a3f4b15f45cc45e8ad261f65a1cc by Thomas Baumgart.
Committed on 30/07/2025 at 09:57.
Pushed by tbaumgart into branch '5.2'.

Allow resizing of columns
FIXED-IN: 5.2.1
(cherry picked from commit c287f8389b645551aecd57fabecedf5b6785ae7f)

M  +2    -0    kmymoney/widgets/columnselector.cpp

https://invent.kde.org/office/kmymoney/-/commit/8ccf45b27241a3f4b15f45cc45e8ad261f65a1cc