Allow resizing of columns

BUG: 507148
FIXED-IN: 5.2.1
(cherry picked from commit c287f8389b645551aecd57fabecedf5b6785ae7f)